--- a/view/geo_texture.html
+++ b/view/geo_texture.html
@@ -41,15 +41,15 @@
             var triangle_source =
                 "attribute vec4 a_Position;" +
                 "attribute vec2 a_texCoord;" +
-                "attribute vec4 a_Normal;" +
+                // "attribute vec4 a_Normal;" +
                 "varying vec2 v_texCoord;" +
-                "varying vec4 v_Normal;" +
+                // "varying vec4 v_Normal;" +
                 "uniform mat4 u_mvp_matrix;" +
                 "void main() {" +
                 //   "gl_Position =  a_Position;" +
                 "gl_Position =  u_mvp_matrix * a_Position;" +
                 "v_texCoord = a_texCoord;" +
-                "v_Normal = a_Normal;" +
+                // "v_Normal = a_Normal;" +
                 "}";
             var fragment_source =
                 "precision mediump float;" +
