阴影 - 添加帧缓冲区初始化部分

--- a/view/geo_texture.html
+++ b/view/geo_texture.html
@@ -85,7 +85,7 @@
                 console.log("fail to get attibute a_texCoord");
                 return;
             }
-            var texture_data = await dem.loadTextrue(gl, dem_texture_image, {
+            var texture_data = await dem.loadTexture(gl, dem_texture_image, {
                 location: gl.getUniformLocation(shaderProgram, "u_Sampler")
             });
             var n = initBuffers();
